# abap-notebook

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/components/editor/: CodeEditor.tsx
src/components/entries/: CodeBlocksPanel.tsx  EntryCard.tsx  EntryForm.tsx  NoteEntryForm.tsx
src/components/layout/: RootLayout.tsx  Sidebar.tsx
src/lib/: abap-language.ts  i18n.ts  tauri.ts  useT.ts
src/pages/: EditEntryPage.tsx  EntryDetailPage.tsx  HomePage.tsx  NewEntryPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
